[package]
name = "algorythms"
version = "0.1.0"
authors = ["ivan.temchenko <ivan.temchenko@yandex.ua>"]
edition = "2018"
[lib]
crate-type = ["cdylib"]
bench = true
test = true
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
